2003-05-08  John Levon  <levon@movementarian.org>

	* libpp/profile_spec.h:
	* libpp/profile_spec.c: rename the set_p variables,
	remove pointless is_empty() function

	* pp/opreport.cpp: split collation and output into
	two separate functions. Rename the temporary structures
	so it's hopefully a bit more obvious what's happening.
	Add sourcedocs.

2003-05-08  John Levon  <levon@movementarian.org>

	* pp/opreport_options.h:
	* pp/opreport_options.cpp: add options::cout,
	  --output-file option

	* pp/opreport.cpp: use options::cout

2003-05-08  John Levon  <levon@movementarian.org>

	* pp/format_output.cpp: fix cumulative column widths

2003-05-08  John Levon  <levon@movementarian.org>

	* opreport_options.h: add accumulated

	* opreport.cpp: handle --accumulated

2003-05-08  Philippe Elie  <phil.el@wanadoo.fr>

	* libpp/symbol_container.cpp: minor tidy

	* libpp/profile.h:
	* libpp/profile.cpp: allow to cumulate sample file
	* libpp/profile_container.h:
	* libpp/profile_container.cpp: remove free function add_samples()

	* pp/annotate.cpp:
	* pp/opgprof.cpp:
	* pp/opreport.cpp: when possible cumulate samples into a profile_t
	  first before cumulating them in a profile_container

2003-05-07  John Levon  <levon@movementarian.org>

	* pp/opannotate.cpp: small cleanup

2003-05-07  John Levon  <levon@movementarian.org>

	* pp/opreport_options.cpp: remove unneeded include

2003-05-07  John Levon  <levon@movementarian.org>

	* libpp/Makefile.am:
	* libpp/parse_cmdline.h:
	* libpp/parse_cmdline.cpp: rename to ...

	* libpp/profile_spec.h:
	* libpp/profile_spec.cpp: this. Make handle_nonoptions()
	be a static factory create() method instead. Make
	select_sample_filenames() be a member generate_file_list()
	instead. Concomitant cleanups.

	* libpp/filename_spec.h:
	* pp/opannotate_options.cpp:
	* pp/opgprof_options.cpp:
	* pp/opreport_options.cpp: changes from above

2003-05-07  John Levon  <levon@movementarian.org>

	* libpp/profile.cpp: fix stupid error in last commit
